--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
                         flex-column
                         flex-md-row justify-content-md-between">
                 <a href="{{ site.base }}/" class="">
-                    <img src="{{ site.base }}/img/logo.png"
-                         srcset="{{ site.base }}/img/logo@2x.png 2x"
-                         alt="Awesome" id="logo">
+                    <img src="{{ site.base }}/img/koulogo.jpg"
+                         srcset="{{ site.base }}/teknofak.png 2x"
+                         alt="Teknoloji Fakültesi" id="logo">
                 </a>
                 <ul class="nav nav-pills justify-content-center">
 
@@ -65,9 +65,9 @@
 
             <div class="footer">
                 <p>
-                    <a href="http://dept.example.edu/">Illustrious Department</a>
+                    <a href="http://teknoloji.kocaeli.edu.tr/index.php">Illustrious Department</a>
                     at the
-                    <a href="http://example.edu/">University of Example</a>
+                    <a href="http://www.kocaeli.edu.tr/">University of Example</a>
                 </p>
             </div>
 
